--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 12:39:00 PM</p>
+    <p class="lastupdate">09/14/2020 12:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">86.2&#176;F</td>
+        <td class="data">87.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">86.2&#176;F</td>
+        <td class="data">87.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">86.2&#176;F</td>
+        <td class="data">87.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.2&#176;F</td>
+        <td class="data">49.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">28%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.942 inHg (-0.040)</td>
+        <td class="data">29.940 inHg (-0.040)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ENE (68&#176;)</td>
+        <td class="data">2 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:38:09 PM">
-            86.2</span><br/>
+          <span title="12:43:37 PM">
+            87.0</span><br/>
           <span title="07:19:55 AM">
             49.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:38:09 PM" class="hival">
-            86.2</span>
+          <span title="12:43:37 PM" class="hival">
+            87.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:52:32 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:40:53 AM">
             95</span><br/>
-          <span title="12:38:07 PM">
-            29</span>
+          <span title="12:41:33 PM">
+            28</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          13
+          15
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 21 hours, 52 minutes</td>
+      <td class="data">12 days, 21 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 21 hours, 52 minutes</td>
+      <td class="data">12 days, 21 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
