--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 12:44:00 PM</p>
+    <p class="lastupdate">09/14/2020 12:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.0&#176;F</td>
+        <td class="data">88.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.0&#176;F</td>
+        <td class="data">88.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.0&#176;F</td>
+        <td class="data">88.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">28%</td>
+        <td class="data">27%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.940 inHg (-0.040)</td>
+        <td class="data">29.941 inHg (-0.040)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph E (90&#176;)</td>
+        <td class="data">1 mph ESE (112&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.1&#176;F</td>
+        <td class="data">75.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -119,7 +119,7 @@
         <tr>
           <td class="label">Moon Phase</td>
           <td class="data">Waning crescent<br/>
-            9%</td>
+            8%</td>
         </tr>
       </table>
     </div>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:43:37 PM">
-            87.0</span><br/>
+          <span title="12:48:55 PM">
+            88.1</span><br/>
           <span title="07:19:55 AM">
             49.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:43:37 PM" class="hival">
-            87.0</span>
+          <span title="12:48:55 PM" class="hival">
+            88.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:52:32 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:40:53 AM">
             95</span><br/>
-          <span title="12:41:33 PM">
-            28</span>
+          <span title="12:48:23 PM">
+            27</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          15
+          16
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 21 hours, 57 minutes</td>
+      <td class="data">12 days, 22 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 21 hours, 57 minutes</td>
+      <td class="data">12 days, 22 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
