--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 01:14:00 PM</p>
+    <p class="lastupdate">09/14/2020 01:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.4&#176;F</td>
+        <td class="data">92.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.4&#176;F</td>
+        <td class="data">92.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.4&#176;F</td>
+        <td class="data">92.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.2&#176;F</td>
+        <td class="data">46.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">22%</td>
+        <td class="data">21%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.928 inHg (-0.055)</td>
+        <td class="data">29.924 inHg (-0.060)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph S (180&#176;)</td>
+        <td class="data">2 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.6&#176;F</td>
+        <td class="data">75.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:13:41 PM">
-            91.4</span><br/>
+          <span title="01:18:49 PM">
+            92.3</span><br/>
           <span title="07:19:55 AM">
             49.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:13:41 PM (Monday)">
-            91.4</span><br/>
+          <span title="01:18:49 PM (Monday)">
+            92.3</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:13:41 PM" class="hival">
-            91.4</span>
+          <span title="01:18:49 PM" class="hival">
+            92.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:13:41 PM (Monday)" class="hival">
-            91.4</span>
+          <span title="01:18:49 PM (Monday)" class="hival">
+            92.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:40:53 AM">
             95</span><br/>
-          <span title="01:08:53 PM">
-            22</span>
+          <span title="01:15:43 PM">
+            21</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:09:01 AM">
             29.985</span><br/>
-          <span title="01:32:00 AM">
-            29.926</span>
+          <span title="01:16:01 PM">
+            29.922</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:09:01 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          18
+          17
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 22 hours, 27 minutes</td>
+      <td class="data">12 days, 22 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 22 hours, 27 minutes</td>
+      <td class="data">12 days, 22 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
